<resources>
    <string name="app_name">RAHAT</string>
    <string name="cancel_camel_case">Cancel</string>
    <string name="header_pin1">Create a passcode</string>
    <string name="header_pin2">for your asan account</string>
    <string name="repeat_pin">repeat pin num</string>
    <string name="send_code_again">You can send code agin if it doe not reach in</string>
    <string name="enter_otp_code">We have sent it to </string>
    <string name="code_sent_to">Enter the 6-digit code</string>
    <string name="error_message">Error</string>
    <string name="enter_pin">Enter pin</string>
    <string name="enter_current_pin">enter current pin</string>
    <string name="repeat_pin_is_wrong">repeat pin is wrong</string>
    <string name="ok">Ok</string>
    <string name="enter_new_pin">enter new pin</string>
    <string name="pin_is_wrong">pin is wrong</string>
    <string name="authentication_failed">authentication failed</string>
    <string name="biometric_login">biometric login</string>
    <string name="login_with_biometric_credentials">login with biometric credentials</string>
    <string name="cancel_all_caps">cancel all caps</string>

    <string-array name="countryCode">
        <item>+994</item>
        <item>+7</item>
        <item>+90</item>
        <item>+49</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_error_message">Error</string>
    <string name="terms">By entering your passcode you agree to our</string>
    <string name="termsAndContition"><![CDATA[Terms & Contition]]></string>
    <string name="termsAndCondition"><![CDATA[Terms & Conditions]]></string>
    <string name="personalDetails">What are your personal details?</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="pleaseAdd">Please add value</string>
    <string name="personalAddress">What\'s your home address?</string>
    <string name="country">Country</string>
    <string name="postalCode">Postal code</string>
    <string name="address">Address</string>
    <string name="primaryEmail">And what\'s your primary email?</string>
    <string name="emailHint">We will only use to advise you for any important changes</string>
    <string name="email">Email</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="successText">Your account has been created</string>
    <string name="title_activity_maps">Map</string>
    <string name="mobile_pattern">+994</string>
    <string name="login_with_pin">Login with your pin</string>
    <string name="title_orders">Order</string>
    <string name="title_setting">Setting</string>
    <string name="title_live_chat">Chat</string>
    <string name="asan_services">RAHAT Services</string>
    <string name="where_to_go">Where to go?</string>
    <string name="taxi">TAXI</string>
    <string name="submit">Submit</string>
    <string name="rider_cancel">Cancel</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="deliveries">Deliveries</string>
    <string name="rides">Rides</string>
    <string name="on_demand">On Demand</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="minimum_order">minimum order</string>
    <string name="opening_hour">Openning hour</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="products">Cuisine category</string>
    <string name="only_veg">Only vegan</string>
    <string name="cuisine">cusine</string>
    <string name="view_cart">View Card</string>
    <string name="service_people">Service Persons</string>
    <string name="packages">Servisler</string>
    <string name="changing_password">Change password</string>
    <string name="changing_login_pin">change login</string>
    <string name="change_language">Change language</string>
    <string name="change_theme">change theme</string>
    <string name="changeUserName">Change full name</string>
    <string name="changePassword">Change password</string>
    <string name="changeAddress">Change home address</string>
    <string name="numberkeyboard_zero">0</string>
    <string name="numberkeyboard_one">1</string>
    <string name="numberkeyboard_two">2</string>
    <string name="numberkeyboard_three">3</string>
    <string name="numberkeyboard_four">4</string>
    <string name="numberkeyboard_five">5</string>
    <string name="numberkeyboard_six">6</string>
    <string name="numberkeyboard_seven">7</string>
    <string name="numberkeyboard_eight">8</string>
    <string name="numberkeyboard_nine">9</string>
</resources>
