<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.registration.AddEmailActivity">


    <include
        android:id="@+id/include5"
        layout="@layout/asan_into_header" />

    <LinearLayout
        android:layout_marginTop="24dp"
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include5">

        <TextView
            android:id="@+id/emptyLeft"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header1"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/primaryEmail"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/header2"
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:text="@string/emailHint"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/emptyRight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerContainer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:hint="hajiyevelnur04@gmail.com"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColorHint="@color/hint"
            android:backgroundTint="@color/colorPrimary"
            android:foregroundTint="@color/hint"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/continueContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="@drawable/rounded_corners_primary"
            android:gravity="center"
            android:paddingStart="64dp"
            android:paddingTop="15dp"
            android:paddingEnd="64dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Done"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>