<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.PinActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/asan_into_header" />

    <ScrollView
        android:id="@+id/scrollViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="24dp"
                android:id="@+id/headerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include1">

                <TextView
                    android:id="@+id/emptyLeft"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/header"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/code_sent_to"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/emptyRight"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:text="@string/enter_otp_code"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auth_message" />

           <com.eebros.asan.view.AsanPinView
                android:id="@+id/pinCodeView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_gravity="center"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="@drawable/red_edittext_style"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@null"
                android:textSize="37.5sp"
                app:cursorColor="@color/transparent"
                app:cursorWidth="0dp"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="67.5dp"
                app:itemRadius="5dp"
                app:itemSpacing="6.8dp"
                app:itemWidth="45dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineColor="@color/white"
                app:lineWidth="0dp"
                app:viewType="rectangle" />


            <ImageView
                android:id="@+id/progressImage"
                android:src="@drawable/ic_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:visibility="gone"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_marginBottom="32dp"
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:gravity="center"
            android:id="@+id/sendOtpAgain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:lineSpacingExtra="8sp"
            android:text="@string/send_code_again"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinCodeView" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="0:59"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/pinCodeView" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>